; ModuleID = '/home/carl/AnghaBench/linux/drivers/mtd/extr_mtdswap.c_mtdswap_auto_header.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mtd/extr_mtdswap.c_mtdswap_auto_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtdswap_dev = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i64 }
%union.swap_header = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i64, i64 }

@PAGE_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"SWAPSPACE2\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mtdswap_dev*, i8*)* @mtdswap_auto_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mtdswap_auto_header(%struct.mtdswap_dev* %0, i8* %1) #0 {
  %3 = alloca %struct.mtdswap_dev*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %union.swap_header*, align 8
  store %struct.mtdswap_dev* %0, %struct.mtdswap_dev** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %union.swap_header*
  store %union.swap_header* %7, %union.swap_header** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = load i32, i32* @PAGE_SIZE, align 4
  %10 = sub nsw i32 %9, 10
  %11 = call i32 @memset(i8* %8, i32 0, i32 %10)
  %12 = load %union.swap_header*, %union.swap_header** %5, align 8
  %13 = bitcast %union.swap_header* %12 to %struct.TYPE_3__*
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  store i32 1, i32* %14, align 8
  %15 = load %struct.mtdswap_dev*, %struct.mtdswap_dev** %3, align 8
  %16 = getelementptr inbounds %struct.mtdswap_dev, %struct.mtdswap_dev* %15, i32 0, i32 0
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = sub nsw i64 %19, 1
  %21 = load %union.swap_header*, %union.swap_header** %5, align 8
  %22 = bitcast %union.swap_header* %21 to %struct.TYPE_3__*
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 2
  store i64 %20, i64* %23, align 8
  %24 = load %union.swap_header*, %union.swap_header** %5, align 8
  %25 = bitcast %union.swap_header* %24 to %struct.TYPE_3__*
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 1
  store i64 0, i64* %26, align 8
  %27 = load i8*, i8** %4, align 8
  %28 = load i32, i32* @PAGE_SIZE, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i8, i8* %27, i64 %29
  %31 = getelementptr inbounds i8, i8* %30, i64 -10
  %32 = call i32 @memcpy(i8* %31, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 10)
  ret i32 0
}

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
